grammar.txt

stmt_list -> stmt (stmt)*

stmt -> create_stmt | describe_stmt | insert_stmt | select_stmt

create_stmt -> CREATE TABLE ID LPAREN PRIMARY KEY ID (COMMA ID)* RPAREN SEMICOLON

describe_stmt -> DESCRIBE ID SEMICOLON

insert_stmt -> INSERT INTO ID SET ID EQUALS value (COMMA ID EQUALS value)* SEMICOLON

select_stmt -> SELECT select_expr SEMICOLON

select_expr -> expr | ID (COMMA ID)* FROM ID ( WHERE ID EQUALS variable (COMMA ID EQUALS value)* (ORDER BY ID (ASC|DESC))? (LIMIT INT)? )*

value -> INT | STRING

expr -> term ((PLUS | MINUS) term)*

term -> factor ((MUL | DIV) factor)*

factor -> INT | LPAREN expr RPAREN


TODO
 - split create on column_list == primary_key, (column_list)?
 - split insert on assignments == into table set assignments
 - split select on column_list, assignments, order?, limit? == (column_list)+ from .. where assignments order limit
 - gui
 - semantic analysis ? (check order by col present in results)

- Expressions in insert: insert into foobar set foo = ( 1 + 1 ) * 2
- Multi expressions in select: select 1 + 1, 2 + 2
- Mix expressions and ids in select: select 1 + 1, foo from foobar

- Boolean logic in select: select foo from foobar where foo > 1
- Boolean expressions in select: select foo from foobar where foo > 1 or bar = 2
